--- a/projects/face-attendance.html
+++ b/projects/face-attendance.html
@@ -56,7 +56,7 @@
               <span class="tech-item">OpenCV</span>
               <span class="tech-item">ALgoritma KNN</span>
               <span class="tech-item">Flask Framework</span>
-              <span class="tech-item"></span>
+              <span class="tech-item">gTTS (Google Text-to-Spech</span>
               <span class="tech-item">MySQL</span>
             </div>
           </div>
@@ -96,4 +96,5 @@
 
   <script src="../script.js"></script>
 </body>
+
 </html>
