--- a/projects/face-attendance.html
+++ b/projects/face-attendance.html
@@ -43,10 +43,10 @@
             <h2>Fitur Utama</h2>
             <ul>
               <li>Presensi dengan pengenalan wajah real-time</li>
-              <li>Verifikasi dua faktor dengan RFID (opsional)</li>
+              <li>Verifikasi Senyuman</li>
+              <li>Verifikasi Kedip Mata</li>
               <li>Dashboard admin untuk manajemen pengguna</li>
               <li>Ekspor data presensi ke Excel</li>
-              <li>Multi-level akses (admin, guru, siswa)</li>
             </ul>
           </div>
 
@@ -98,3 +98,4 @@
 </body>
 
 </html>
+
