--- a/projects/rfid-attendance.html
+++ b/projects/rfid-attendance.html
@@ -53,9 +53,8 @@
             <ul>
               <li>Autentikasi dua faktor (RFID + Wajah)</li>
               <li>Penyimpanan data presensi dengan timestamp</li>
-              <li>Antarmuka web untuk admin dan guru</li>
+              <li>Antarmuka web untuk manajemen data siswa dan presensi</li>
               <li>Ekspor data ke format CSV</li>
-              <li>Mode offline dengan sinkronisasi ketika online</li>
             </ul>
           </div>
 
@@ -64,7 +63,7 @@
             <div class="tech-stack">
               <span class="tech-item">ESP32</span>
               <span class="tech-item">RC522 RFID</span>
-              <span class="tech-item">SPIFFS Storage</span>
+              <span class="tech-item">Kamera</span>
               <span class="tech-item">PHP</span>
               <span class="tech-item">MySQL</span>
             </div>
@@ -105,4 +104,5 @@
 
   <script src="../script.js"></script>
 </body>
+
 </html>
