--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             alt="Ikon telepon"
             class="icon contact-icon"
           />
-          <p><a href="wa.me/6285869106314?text=HAI%20BUB!">+62 858-6910-6314</a></p>
+          <p><a href="https://wa.me/6285869106314?text=HAI%20BUB!">+62 858-6910-6314</a></p>
         </div>
         <div class="contact-info-container">
           <img
