Update Tentang Saya

--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
           </div>
           <div class="text-container">
             <p>
-              Fresh Graduate Teknik Komputer dengan konsentrasi di bidang Internet of Things (IoT). 
-              Memiliki minat dan keahlian dalam pengembangan solusi berbasis IoT, machine learning, 
-              pengembangan web, dan desain antarmuka pengguna (UI/UX). Bersemangat untuk menerapkan 
-              pengetahuan teknis dalam menciptakan sistem yang cerdas, fungsional, dan ramah pengguna.
+              Fresh graduate Teknik Komputer dari Universitas Teknologi Yogyakarta dengan Indeks Prestasi Kumulatif (IPK) 3.74, memiliki konsentrasi pada Internet of Things (IoT). Memiliki minat dalam pengembangan solusi berbasis IoT, machine learning, dan pengembangan web, serta perancang antarmuka pengguna (UI/UX). Antusias untuk mengaplikasikan kemampuan teknis dalam menciptakan sistem yang cerdas dan fungsional. Saat ini sedang mencari peluang untuk berkontribusi dan berkembang dalam industri teknologi. 
             </p>
           </div>
         </div>
