update format foto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nur Amin - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/favicon.png" type="image/png" />
+    <link rel="icon" href="assets/favicon.webp" type="image/png" />
   </head>
   <body>
     <!-- Navigation -->
@@ -42,7 +42,7 @@
     <!-- Profile Section -->
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Foto profil Nur Amin" />
+        <img src="./assets/profile-pic.webp" alt="Foto profil Nur Amin" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Halo, saya</p>
@@ -83,7 +83,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic.webp"
             alt="Foto profil"
             class="about-pic"
           />
@@ -560,7 +560,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project-1.webp"
                 alt="Sistem Peringatan Dini Banjir"
                 class="project-img"
               />
@@ -586,7 +586,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project-2.webp"
                 alt="Sistem Presensi Pengenalan Wajah"
                 class="project-img"
               />
@@ -613,7 +613,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-4.png"
+                src="./assets/project-3.webp"
                 alt="Sistem Presensi dengan ESP32-CAM"
                 class="project-img"
               />
@@ -639,7 +639,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-5.png"
+                src="./assets/project-5.webp"
                 alt="Sistem Presensi Geolocation"
                 class="project-img"
               />
