--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,12 @@
 
     <!-- Footer -->
     <footer>
-      <p>Watermark &#169; 2025 Nur Amin.</p>
+      <div class="footer-quote">
+        <p class="quote-text">"Do'akan usahamu, usahakan do'amu"</p>
+      </div>
+      <p class="footer-copyright">
+        &#169; <span id="year"></span> Nur Amin. All rights reserved.
+      </p>
     </footer>
 
     <script src="script.js"></script>
