--- a/projects/face-attendance.html
+++ b/projects/face-attendance.html
@@ -91,8 +91,13 @@
   </div>
 
   <footer>
-    <p>Watermark &copy; 2025 Nur Amin.</p>
-  </footer>
+      <div class="footer-quote">
+        <p class="quote-text">"Do'akan usahamu, usahakan do'amu"</p>
+      </div>
+      <p class="footer-copyright">
+        &#169; <span id="year"></span> Nur Amin. All rights reserved.
+      </p>
+    </footer>
 
   <script src="../script.js"></script>
 </body>
