path asset untuk mobile

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
               <div class="details-container color-container">
                 <div class="article-container">
                   <img
-                    src="./assets/project-1.png"
+                    src="./assets/project-1.webp"
                     alt="Sistem Peringatan Dini Banjir"
                     class="project-img"
                   />
@@ -894,7 +894,7 @@
               <div class="details-container color-container">
                 <div class="article-container">
                   <img
-                    src="./assets/project-2.png"
+                    src="./assets/project-2.webp"
                     alt="Sistem Presensi Pengenalan Wajah"
                     class="project-img"
                   />
@@ -923,7 +923,7 @@
               <div class="details-container color-container">
                 <div class="article-container">
                   <img
-                    src="./assets/project-4.png"
+                    src="./assets/project-3.webp"
                     alt="Sistem Presensi dengan ESP32-CAM"
                     class="project-img"
                   />
